--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
   }
 
 body{
-    background-image: url("assets/nationalpark.jpg");
+    background-image: url("nationalpark.jpg");
 }
 
 .container{
